Removing all .css files from git tracking. Its just too much of a pain when collaborating, it keeps needing conflicts resolved.

--- a/assets/scss/typo.scss
+++ b/assets/scss/typo.scss
@@ -117,6 +117,7 @@ ul.horizontal {
 .list-unstyled { 
     margin-left: 0; 
     list-style: none; 
+    li {margin-left:0}
 }
 
 
